<resources>
    <string name="app_name">Pipeline</string>
    <string name="sign_up_underline"><u>Sign Up</u></string>
    <string name="sign_up">Sign Up</string>
    <string name="welcome_message">Welcome to Pipeline</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="no_account_prompt">Don\'t have an account?</string>
    <string name="have_account_prompt">Have an account?</string>
    <string name="username_hint">Username</string>
    <string name="login"><u>Login</u></string>
    <string name="login_underline"><u>Login</u></string>
    <string name="add_conversation">Add Conversation</string>
    <string name="logo_alt_text">Pipeline Logo</string>
    <string name="settings">Settings</string>
    <string name="log_out">Log out</string>
    <string name="title_activity_search">SearchActivity</string>
    <string name="search_hint">Search by username or email</string>
    <string name="new_group">New Group</string>
    <string name="add_contacts">Add Contacts</string>
    <string name="chats">Chats</string>
    <string name="next">Next</string>
    <string name="nickname">Nickname</string>
    <string name="title">Title</string>
    <string name="save_convo_settings">Save Conversation Settings</string>
    <string name="save_user_settings">Save User Settings</string>
    <string name="err_email_in_use">Email already in use</string>
    <string name="err_invalid_email">Invalid email</string>
    <string name="err_unknown">Unknown error</string>
    <string name="err_blank">Blank email or password</string>
    <string name="err_no_credentials">No matching user credentials found</string>
    <string name="err_short_username">Username must be more than 6 characters</string>
    <string name="err_username_taken">Username already taken</string>
    <string name="new_msg">New message from %s</string>
    <string name="info_change_convo_title">%s changed conversation title to \"%s\"</string>
    <string name="info_remove_convo_title">%s removed conversation title</string>
    <string name="empty_group">Empty group</string>
    <string name="info_left_convo">%s left the conversation</string>
    <string name="info_removed">%s removed %s</string>
    <string name="add_users">Add Users</string>
    <string name="info_added">%s added %s to the conversation</string>
</resources>
